# MNQ

./: Pipfile  README.md  app.py  app.ui  calcuating.py  calculating.py  example_data.csv  main.py  plotting.py  pyproject.toml  requirements.txt  utils.py  Записка.md
mnq/: app.py  app.ui  calculating.py  exporting.py  main.py  main.spec  plotting.py  requirements.txt
slides/: slides.html  slides.md  slides.org
src/: app.py  app.ui  calculating.py  config.py  example.csv  exporting.py  plotting.py
src/assets/times/: times-bold.pkl  times-italic.pkl  times.pkl
