[tool.poetry]
name = "mnq"
version = "0.1.0"
description = "MNK program alternative"
authors = ["zulu <zzu1u@list.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "*"
numpy = "*"
matplotlib = "*"
scikit-learn = "*"
pyinstaller = "^6.2.0"
fpdf2 = "^2.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
